Implement sticky footer

--- a/404.md
+++ b/404.md
@@ -4,5 +4,7 @@ permalink: /404.html
 ---
 
 # Error 404
-The resource requested was not found. Now leave!
-[Leave this place!](/)
+{% comment %}
+Source:https://www.youtube.com/watch?v=_Z4MQ3hH3O0
+{% endcomment %}
+The resource requested could not be found. Go back. [Leave this place!](/)
