Add review draft for Wilder Girls

--- a/_drafts/2023-01-2023-nanowrimo2023.md
+++ b/_drafts/2023-01-2023-nanowrimo2023.md
@@ -1,17 +1,22 @@
 ---
+layout: post
 title: Nanowrimo 2023
-author: Luna
 ---
 
-**Content Warning: Discussions of Abuse, Horror, Racism, Ablism, Grooming**
+> Content Warning: Discussions of Abuse, Horror, Racism, Ablism, Grooming
 
 # Introduction
 
-I've been writing the same novel for over three years. It's gotten to the point where when I'm on a train or sat at home without anything else to do, I'll think:
+I've been writing the same novel for over three years. It's gotten to the point 
+where when I'm on a train or sat at home without anything else to do, I'll think:
 
-> "I really wish I'd finish that novel already."
+"I really wish I'd finish that novel already."
 
-And it's not just because it's the only novel idea I have. I have several floating around inside my skull at any given time. It's just that this particular novel had too much I liked about it to leave it alone forever. Its strange how the application of an idea plus time can leave you with this hollow, empty feeling that you should have done it, you could have done it had you been a stronger person.
+And it's not just because it's the only novel idea I have. I have several floating around inside my skull at any given time. It's just that this particular work
+had too much I liked about it to leave it alone forever. Its strange how the 
+application of an idea plus time can leave you with this hollow, empty feeling 
+that you should have done it, you could have done it had you been a stronger 
+person.
 
 But how on Earth am I ever going to motivate myself to push out a first draft when so many other attempts I've had failed? How do I know this won't drag on another three years and I'll feel even more regret than if I simply committed to working on other projects? Will I be doomed to become one of *those* writers for the rest of my life?
 
@@ -20,40 +25,102 @@ Since I am of a nervous disposition I often find myself thinking questions like 
 Thankfully, there's a clean and elegant solution to all of this.
 
 # The National Novel Writing Month
-I do so loathe dictionary introductions to concepts in non-fiction writing. If you can't use a search engine, why are you even attempting to engage with the subject matter in a critical manner in the first place? Despite this, I still have people come up to me and tell me they have absolutely no idea what on Earth I'm talking about so here goes.
+I hate dictionary introductions to concepts in non-fiction writing. If you can't use a search engine, why are you even attempting to engage with the subject matter in a critical manner in the first place? Despite this, I still have people come up to me and tell me they have absolutely no idea what on Earth I'm talking about, so here goes.
 
-The National Novel Writing Month (hiterto referred to as "NaNoWriMo") is an annual challenge organised by charity in which you must write 50,000 words of a new novel in a month. It's been going ever since 1999 and has been the genesis of many a new novel over the years.
-
-I've actually taken part in it a number of times myself after I was introduced to it very closely to the event happening in 2021. Just for the sake of posterity I'll write about how each of those years went quickly so when I need to explain them again, I can just link to this post instead of having to repeat myself.
+The National Novel Writing Month (which I'll refer to as "NaNoWriMo") is an annual challenge organised by charity in which you must write 50,000 words of a new novel in 30 days. It's been going ever since 1999 and has been the genesis of many a new novel over the years. I've actually taken part in it a number of times myself after I was introduced to it very closely to the event happening in 2020. Just for the sake of posterity I'll write about how each of those years went quickly so when I need to explain them again, I can just link to this post instead of having to repeat myself.
 
 ## 2020
-At this point, I was very much a "some day" writer. One of those authors who wants to write a book "some day" without any serious intention to release it or have it scrutinised by any other living thing. I had read books. I had even entered a couple of short fiction competitions and won. But for whatever reason me and writing just never really came together. When I heard of the challenge it almost seemed to simplistic. There was no way you could ever write a novel like this. It simply wasn't possible. But I was determined to try.
+At this point, I was very much a "some day" writer. One of those authors who wants to write a book some day without any serious intention to release it or have it scrutinised by living people. I read books. I had even entered a couple of short fiction competitions and won. But for whatever reason me and writing just never really came together. When I heard of the challenge it almost seemed too simplistic. There was no way you could ever finish a novel this way. It simply wasn't possible. That didn't stop me from trying.
 
-I had about a week to prepare. I spent about none of that time seriously giving it my best shot. I briefly had an idea to write a book about a man going to great lengths to participate in the competition before being sent on the run after something strange and mysterious happens. But this got shelved very quickly when I had what I believed to be a golden egg of an idea:
+I had about a week or so to prepare. I spent about none of that time seriously giving it my best shot. I briefly had an idea to write a book about a man going to great lengths to participate in the competition before being sent on the run after something strange and mysterious happens. But this got shelved very quickly when I had what I believed to be a golden egg of an idea:
 
-Lesbian Amazonian Catgirls
+*Lesbian Amazonian Catgirls*
 
-Thankfully when the deadline hit it didn't go anywhere. Turns out this whole writing thing was way way harder than I thought. I managed to write about a single scene that I liked and the rest of it was stream of consciousness garbage trying to fill word count. A lot of it writing whatever I happened to think was funny that day which was almost certainly not funny at all.
+Thankfully this didn't go anywhere. Turns out this whole writing thing was much, much harder than I first thought. I managed to write about a single scene that I liked and the rest of it was stream of consciousness garbage trying to fill up word count. A lot of it writing whatever I happened to think was funny that day which was almost certainly not funny at all. A lot of scenes that went nowhere with no underlying plot structure and prose that looked like a chimpanzee ordered a fly to write it. 
 
-A lot of scenes that went nowhere with no underlying plot structure and prose that looked like a chimpanzee ordered a fly to write it. There was some stuff I liked. There was a particular scene where a character was being berated by their mother that had a strange amount of emotional bite to it, but since it didn't connect to the loose connection of pocket fluff that I would call a plot structure it would almost certainly have to be cut anyway.
-
-The problem was that I was surrounded by much more competant writers and I felt a childish need to show off to everyone how brilliant I was. But it wasn't an entire waste of time! I did find the research process engaging and it did prove to me that novel writing was possible, even if it was about as difficult as I expected.
+There was some stuff I liked. There was a particular scene where a character was being berated by their mother that had a strange amount of emotional bite to it. Though since it didn't connect to the loose connection of pocket fluff that I would call a plot structure it would almost certainly have to be cut anyway. The problem was since I was surrounded by much more competant writers and I felt a childish need to show off to everyone how brilliant I was. It wasn't an entire waste of time! I did find the research process engaging and it did prove to me that novel writing was possible, even if it was about as difficult as I expected.
 
 ## 2021
 I'm going to mostly be skipping over this year because of how it intersects with this one. Needless to say I felt that I should be taking someone else's advice for once and creating a short story collection or an anthology in an attempt to give myself the opportunity to work on other things. This didn't pan out and I ended up having to skip this year entirely.
 
 ## 2022
-This was going to be the year that I would complete the challenge as intended. I started my planning early. I was going to do it right. Ultimately it didn't work out as planned. I had to change the entire concept of the novel halfway through. At first it was kind of a depressing, nautical themed horror that I feel would be much better for a video game than a book.
-
-The other idea I had was to write a magical girl murder mystery. This also ended up being seriously depressing and I bailed on it after 20,000 words. Real life seriously got in the way and I'd love to return to this concept as well.
+This was going to be the year that I would complete the challenge as intended. I started my planning early. I was going to do it right. Ultimately it didn't work out as planned. I had to change the entire concept of the novel halfway through. At first it was kind of a depressing, nautical themed horror that I feel would be much better for a video game than a book. The other idea I had was to write a magical girl murder mystery. This also ended up being seriously depressing and I bailed on it after 20,000 words. Real life seriously got in the way and I'd love to return to this concept as well.
 
 ## 2023
-So I suppose that leads me to today where I'm trying to get a number of things going and working on the current novel.
+This by far and away has to be my most successful attempt so far. An almost complete manuscript, this is  This is principally what this article is about, so I won't spend too much time on it. All you need to know is that I got a severe case of wrist cramp.
 
-# Backstory
-This novel originally started with a sketch.
+# Background
+## It began with a sketch...
 
-This one cat character is to blame for hundreds of hours being poured into a creative project I believed in. And it ended up being entirely different to how I expected.
+[Insert scan of the one drawing here]
+
+This one drawing is to blame for hundreds of hours being poured into a creative project I believed in. It ended up being entirely different to how I expected. It wasn't intended to be a novel for starters. I had just got done watching the Castlevania TV show and wanted something that had a distinctly visual flair. I figured a comic book was something I could finish this decade. I was sincerely wrong about that. Keep an eye on my reference game because it comes back to haunt me later in life.
+
+The working title was initially "Catwitch". Like "sandwich", just with a distinctly feline flavour. It's a simple premise really, a witch and her cat have traded places and now they have to travel the land to put each other back in their original forms. To be honest, I don't know why I went with this. I could have done it, I probably should have. But over my head I felt this pressure to create something grand and brilliant. Something that I'd be happy leaving as a legacy. Whilst we're at it, make sure to keep an eye on my pretention and ego. Yet another ghost we can add to the list.
+
+One day, perhaps after finishing a very angry read of The Curious Incident of the Dog in the Night Time, I was struck by a profound thought. There aren't any autistic superheroes that I can name. I was sure they existed, but didn't have a capital "S" Story that came along with them. I thought of all the monsters and demons of the night. I thought of a character that could take them on and win. I thought of Dahlia.
+
+## Dahlia
+I think the strongest indicator of just how much development it took to whip my NaNoWriMo entry into something workable is to pay close attention to how this character develops along with their story. At first I was catching up on Samurai Jack and really wanted to lean into the "lone wanderer" archetype. A doctor, someone who would hop about from place to place in a gothic rendition of Victorian England. At this early stage the best kind of plot I figured was as little plot as possible. She couldn't spend all of her time alone so we'll add a little ghost girl for extra grim comedy. All of a sudden this didn't sound like something I'd actually want to write.
+
+Luckily, someone suggested that in order to travel so much on a working class budget, they'd need to work for the railways. I changed their direction from there. Despite this, I really have a long way to go in developing her into someone likable. Her sole devotion to patricide is interesting, but doesn't provide much depth. I'm skipping ahead a little here so bear with me.
+
+You see, in the earliest drafts Dahlia was perhaps a little too competant. Obnoxiously unflappable, if you will. Also, having her cart around a ghost like a fashion accessory just made it all too obvious that I had been binge reading Erma at around the same time. Also, wouldn't people ask questions about a cross-dressing cat person walking around with a magic broomstick? Note how the witch aspect of her character was retained for a long time. I can't imagine everyone she meets being entirely friendly. The idea of her feline appearance being an allegory for the autistic experience was integral from the very beginning. But it was much later I got another idea. An awful, terrible idea.
+
+## The Mask
+It was around the time that the story starts to capture my interest. I had themes floating around in my head, but it was the exact moment that I held the image of a cursed mask inside of my mind where they solidified. I was aware of other stories that featured similar objects. It's a common motif in horror and indeed comics. But I think moreso than other works the exact mechanics of the Mask of Pride gave me the direction I needed to know what I was working on. Magic is a potent element to add to any story. I'm still figuring out the particulars of how it works in mine, but overall I think having a distinct object to write about made the developmental editing a lot easier.
+
+To begin with, Dahlia would be able to remove it while constantly taunting her and into putting it back on. Though I lament the absence of this aspect of the story, I feel I made the concept a lot more understandable once I took that ability away. This stopped the plot from boiling down to a handful of people arguing over the same lump of metal. It speaks much more to the intended themes of the work, too. Speaking only for myself, my own mask is permenantly grafted to my face. I don't know if it will ever leave me. I wanted this to be a metaphor that works both inside and outside of the fiction.
+
+In short, the mask became its own character and my story is all the more improved for it. One that is trying to protect Dahlia, but constantly drains her strength against her will. It has its own goal to achieve that drives further conflict. It makes her tragic desire to kill somewhat understandable as I describe the itching, burning sensation on her skin. The only way to scratch it being to kill her father, or so she thinks.
+
+## Villains and Genre
+I'm not really the biggest fan of villains in fiction. As much use as they aid the writer in giving the story a focus, there's a lot to do with promoting binary morality that can be genuinely harmful. People don't generally think of themselves as evil. We've seen this play out time and time again throughout our history. It was once I decided that the more typical villain named Elric was Dahlia's father that I sprang out of my bed and began to write what would turn into the version I'd submit to the event.
+
+Henry is a great husband, but a terrible father. He supports Dahlia and her unusual appearance only so far as it doesn't interfere with his wife. By the time the story starts, she's long dead. It took me an embarassingly long time to realise this. You see, Gothic fiction has a lot of blood. Not in the literal sense like with slasher movies, but metaphorically. Giving him that familial connection really shored up the concept and stopped it floating away into other genres.
+
+Still to this day I worry that the book isn't scary enough. Action has been core to my work since the very beginning and I'm sure there's some way to do it in future drafts that isn't distracting. But people have been dressing up as vampires for Halloween for decades now. It's hard to make that relevant to audiences born centuries after the revival. But when I noticed that Henry's actions in the story directly conflict with the express wishes of his daughter that he became frightening to me. He wants to help, he thinks he knows how, but his perceptions have been warped by his grief that he is completely unable to. This directly lead into the writing of Lucy's character, which
+
+Panther (I'm still thinking of a formal title for it) was always intended to be a horror story. Specifically Gothic Revival fiction, with Dracula being the closest comparison. I've read a lot of that stuff as part of pre-production, but it took me years to actually sit and read the TVTropes article on the subject. The wasted time chasing conspiracy thrillers, great detective fiction and others without giving my own story its own identity is what caused those three years to sail by. Even still, I must note that what I'm intending to write is much closer to Shakespearean Tragedy than Gothic Horror. Which makes sense given that it's the direct ancestor. Watching Macbeth really cleared my head and made me understand that the Gothic can be a theme rather than a distinct genre you apply to your work. Now, that's enough of my rambling about a book I haven't finished. What happened when I finally tried to write it?
+
+# The Main Event
+## Planning
+Throughout the years I've learned the hard way that I can't write spontaneously. I've tried many times and I just can't quite manage it. Luckily for me, prior to nano I've been working on this story for as long as my writing group had known me. It was a fortunate example of being in the right place at the right time. I don't recommend you wait to participate in crazy internet challenges like this. Having said that, I did spend a little bit too much time monkeying with character names instead of doing long-neglected research on late 19th century England and its railways. I also ended up throwing out my Freytag's pyramid about halfway through.
+
+## Writing
+My computer was locked down with an improperly configured parental control on
+the first day of the event. Not off to an especially great start. In lieu of
+having a keyboard to hand, I took up a pen. And I continued to write with a pen
+throughout the entire event. In hindsight, this was a herculean effort that I
+greatly underestimated. Because of this stubbonness, I almost managed to throw
+the event. I didn't make a single word target past day four or so. In line with
+its reputation NaNoWriMo was brutal. I was lucky that I had a concept I believed
+in and had lots of ideas for interesting scenes. If I hadn't, I almost certainly
+would have given up. In the end, I had to abandon the pen in the last 12 hours
+and copy and paste the word "spam" over and over again in order to make word
+count. Needless to say I'll think twice about working this way in the future.
+
+## The Controversy
+I don't like bringing up interpersonal conflict unecessarily, especially when it
+involves sensitive matters such as these, but I can't just omit it entirely.
+A moderator of the official forums had extremely lax boundaries between themselves
+and children to put it lightly. I'll be honest, I was mostly asleep while this
+was happening. I only found out through my local chapter and don't use the
+forums much at all. I can only hope that those affected are now safe. I feel the
+need to state that this won't affect my attendance, as much as I probably should
+reconsider my participation and monetary support in the future. Even if I'm not
+using Nano's computer systems or organising I still find it too useful as a tool
+to give up entirely. Perhaps I'll do it in October next year to pre-empt any
+future mistakes.
+
+## The Aftermath
+I won, but just barely. It doesn't feel like a worthy victory, but I have a
+manuscript finished that exists almost entirely in narrative prose with no
+stream of consciousness or hacks. I will be editing it in the new year and
+hopefully have something to release partway through 2024. We'll see how that
+pans out as I really want to adhere to a yearly schedule with my novel writing
+going forward. I don't want it to be this one project any more. I want to
+become a novelist.
 
 -----------------------------------------------------------------
 
