Upload Wilder Girls Review

--- a/_drafts/2023-01-2023-nanowrimo2023.md
+++ b/_drafts/2023-01-2023-nanowrimo2023.md
@@ -6,13 +6,21 @@ title: Nanowrimo 2023
 > Content Warning: Discussions of Abuse, Horror, Racism, Ablism, Grooming
 
 # Introduction
+I'd been writing the same novel on and off for over three years. It got to the
+point that, whenever I was sat idle on a train or the sofa I'd stop and think:
+
+"I truly wish I'd hurry up and finish already."
+
+The idea that this doesn't exist pains me and doesn't leave a lot of room for
+interpretation.
 
 I've been writing the same novel for over three years. It's gotten to the point 
 where when I'm on a train or sat at home without anything else to do, I'll think:
 
 "I really wish I'd finish that novel already."
 
-And it's not just because it's the only novel idea I have. I have several floating around inside my skull at any given time. It's just that this particular work
+And it's not just because it's the only novel idea I have. I have several
+floating around inside my skull at any given time. It's just that this particular work
 had too much I liked about it to leave it alone forever. Its strange how the 
 application of an idea plus time can leave you with this hollow, empty feeling 
 that you should have done it, you could have done it had you been a stronger 
@@ -36,7 +44,7 @@ I had about a week or so to prepare. I spent about none of that time seriously g
 
 *Lesbian Amazonian Catgirls*
 
-Thankfully this didn't go anywhere. Turns out this whole writing thing was much, much harder than I first thought. I managed to write about a single scene that I liked and the rest of it was stream of consciousness garbage trying to fill up word count. A lot of it writing whatever I happened to think was funny that day which was almost certainly not funny at all. A lot of scenes that went nowhere with no underlying plot structure and prose that looked like a chimpanzee ordered a fly to write it. 
+Thankfully, this didn't go anywhere. Turns out this whole writing thing was much, much harder than I first thought. I managed to write about a single scene that I liked and the rest of it was stream of consciousness garbage trying to fill up word count. A lot of it writing whatever I happened to think was funny that day which was almost certainly not funny at all. A lot of scenes that went nowhere with no underlying plot structure and prose that looked like a chimpanzee ordered a fly to write it. 
 
 There was some stuff I liked. There was a particular scene where a character was being berated by their mother that had a strange amount of emotional bite to it. Though since it didn't connect to the loose connection of pocket fluff that I would call a plot structure it would almost certainly have to be cut anyway. The problem was since I was surrounded by much more competant writers and I felt a childish need to show off to everyone how brilliant I was. It wasn't an entire waste of time! I did find the research process engaging and it did prove to me that novel writing was possible, even if it was about as difficult as I expected.
 
@@ -104,7 +112,7 @@ count. Needless to say I'll think twice about working this way in the future.
 I don't like bringing up interpersonal conflict unecessarily, especially when it
 involves sensitive matters such as these, but I can't just omit it entirely.
 A moderator of the official forums had extremely lax boundaries between themselves
-and children to put it lightly. I'll be honest, I was mostly asleep while this
+and children, to put it lightly. I'll be honest, I was mostly asleep while this
 was happening. I only found out through my local chapter and don't use the
 forums much at all. I can only hope that those affected are now safe. I feel the
 need to state that this won't affect my attendance, as much as I probably should
@@ -124,7 +132,7 @@ become a novelist.
 
 -----------------------------------------------------------------
 
-This is me going over rthe thing that I did this month. I feel that when I start drafting I need to spend some time and just get into the mood. I feel that it might take some timee and I may make soem false starts. When I'm writing stream of consciousness like this, I discover that kats are cute. No, I mean that I tend to repeat myself a lot. I should probably start by outlining the sections that I want:
+This is me going over the thing that I did this month. I feel that when I start drafting I need to spend some time and just get into the mood. I feel that it might take some timee and I may make soem false starts. When I'm writing stream of consciousness like this, I discover that kats are cute. No, I mean that I tend to repeat myself a lot. I should probably start by outlining the sections that I want:
 
 - What I did
 - Background
